[tool.poetry]
name = "changie"
version = "0.1.0"
description = "Changelog generator"
authors = ["Dawid Sołtysiak <d.soltysiak51@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
coverage = {extras = ["toml"], version = "^7.2.5"}
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pep8-naming = "^0.13.3"

[tool.poetry.scripts]
changie = 'changie.cli:main'

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["changie"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
